# zipper

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/zipper/: __init__.py  api.py  auth.py  coercions.py  config.py  engine.py  lookup.py  normalizer.py  ratelimit.py  router.py  storage.py  storage_memory.py  storage_sqlite.py  types.py
src/zippering/: __init__.py  api.py  coercions.py  config.py  engine.py  lookup.py  router.py  schema.sql  storage.py  storage_memory.py  storage_sqlite.py  types.py
tests/: conftest.py  test_api.py  test_coercions.py  test_engine.py  test_ratelimit.py  test_router.py  test_safety.py  test_validation.py
