[project]
name = "zipper"
version = "0.1.0"
description = "Universal LLM-assisted schema-reconciliation engine: route, normalize, and reconcile heterogeneous source rows into canonical records."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jackson Shuey", email = "jacksonshuey@gmail.com" }]
keywords = ["schema", "reconciliation", "etl", "llm", "data-integration", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.8.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
]

[project.urls]
Homepage = "https://github.com/jacksonshuey/zipper"
Repository = "https://github.com/jacksonshuey/zipper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zipper"]

[tool.hatch.build.targets.wheel.force-include]
"src/zipper/schema.sql" = "zipper/schema.sql"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/zipper/__init__.py" = ["RUF022"]  # __all__ grouped by topic, not sorted

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["fastapi.*", "uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]
